--- a/res/xml/custom_statusbar_settings.xml
+++ b/res/xml/custom_statusbar_settings.xml
@@ -15,15 +15,15 @@
 -->
 
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
-        android:title="STATUSBAR SETTINGS"
+        android:title="S T A T U S B A R   O P T I O N S"
         xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
 
 
     <PreferenceCategory
-		android:title="CLOCK"
+		android:title="C L O C K"
 		android:key="clock">
 
-	<CheckBoxPreference 
+	<SwitchPreference 
 		android:layout="?android:attr/preferenceLayoutChild" 
 		android:key="show_clock"
 		android:summaryOn="Clock is on"
@@ -31,7 +31,7 @@
 		android:title="Clock" 
 		android:defaultValue="true"	/>
 
- 	<CheckBoxPreference 
+ 	<SwitchPreference 
  		android:layout="?android:attr/preferenceLayoutChild"
 	    android:dependency="show_clock"
 		android:key="clock_ampm"
