--- a/res/xml/custom_system_settings.xml
+++ b/res/xml/custom_system_settings.xml
@@ -18,7 +18,10 @@
         android:title="System Settings"
         xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
         
-
+    <PreferenceCategory
+		android:title="S Y S T E M   S E T T I N G S"
+		android:key="system_settings">
+    
     <PreferenceScreen
         android:fragment="com.android.settings.CustomQuietSettings"
         android:key="custom_quiet_time_settings"
@@ -29,7 +32,8 @@
         android:fragment="com.android.settings.CustomLedSettings"
         android:key="custom_led_settings"
         android:title="Led Settings" />
-       
+ 
+    </PreferenceCategory>
         
 
 </PreferenceScreen>
