--- a/res/xml/custom_theme_settings.xml
+++ b/res/xml/custom_theme_settings.xml
@@ -15,8 +15,8 @@
 -->
 
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
-        android:title="T H E M E   O P T I O N S"
-        xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
+        android:title="Theme Settings"
+        >
 
     <PreferenceCategory
 		android:title="T H E M E S"
