--- a/res/xml/custom_toggle_show_hide_settings.xml
+++ b/res/xml/custom_toggle_show_hide_settings.xml
@@ -15,8 +15,8 @@
 -->
 
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
-        android:title="Show or Hide Toggle"
-        xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
+        android:title="Show or Hide Toggles"
+>
 
 	<SwitchPreference 
 		android:key="toggles_show_torch"
