--- a/res/xml/settings_headers.xml
+++ b/res/xml/settings_headers.xml
@@ -27,7 +27,7 @@
 
     <header
         android:id="@+id/custom_settings"
-        android:icon="@drawable/ic_settings_tophat"
+        android:icon="@drawable/junk_settings"
         android:fragment="com.android.settings.CustomJunk"
         android:title="Customize Your Junk" />
 
